@@ -1,6 +1,7 @@
 Version 3.1.1 To be released
 ============================
 BUG: Ticket#670 - TDatePicker: Year Issue (Christophe)
+ENH: Added THead requirement check (Qiang)
 
 Version 3.1.0 July 2, 2007
 ==========================
